<resources>
    <string name="app_name">Playlist Maker</string>

    <string name="main_scr_header">Playlist maker</string>
    <string name="main_scr_search_btn_txt">Поиск</string>
    <string name="main_scr_library_btn_txt">Медиатека</string>
    <string name="main_scr_settings_btn_txt">Настройки</string>

    <string name="settings_scr_header">Настройки</string>
    <string name="settings_scr_theme_select_txt">Тёмная тема</string>
    <string name="settings_scr_share_txt">Поделиться приложением</string>
    <string name="settings_scr_support_txt">Написать в поддержку</string>
    <string name="settings_scr_offert_txt">Пользовательское соглашение</string>

    <string name="support_email">student_practicum@yandex.ru</string>
    <string name="support_msg_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_msg_payload">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offert_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search_scr_input_hint_txt">Поиск</string>

    <string name="search_scr_header">Поиск</string>
    <string name="search_scr_track_name_placeholder_txt">Track Name</string>
    <string name="search_scr_track_author_placeholder_txt">Artist Name</string>
    <string name="search_scr_track_info_separator_placeholder_txt">•</string>
    <string name="search_scr_track_duration_placeholder_txt">1:23</string>
    <string name="search_scr_not_found_txt">Ничего не нашлось</string>
    <string name="search_scr_conn_err_txt">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_scr_redo_btn_txt">Обновить</string>
    <string name="search_scr_clr_hist_btn_txt">Очистить историю</string>
    <string name="search_scr_hist_header_txt">Вы искали</string>

    <string name="player_scr_timecode_placeholder_txt">0:00</string>
    <string name="player_scr_duration_key_txt">Длительность</string>
    <string name="player_scr_album_key_txt">Альбом</string>
    <string name="player_scr_year_key_txt">Год</string>
    <string name="player_scr_genre_key_txt">Жанр</string>
    <string name="player_scr_country_key_txt">Страна</string>
</resources>