<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    android:orientation="horizontal"
    android:paddingHorizontal="12dp"
    android:paddingVertical="8dp">

    <!-- Track label -->
    <ImageView
        android:id="@+id/track_artwork"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_track_label_placeholder_35"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <!-- Track name -->
        <TextView
            android:id="@+id/track_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/search_scr_track_name_placeholder_txt"
            android:textColor="@color/search_track_name_color"
            android:textSize="16sp"
            android:maxLines="1"
            android:fontFamily="@font/ys_display_regular"
            android:ellipsize="end" />

        <!-- Dynamic length author name + duration -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/track_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/search_scr_track_author_placeholder_txt"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintEnd_toStartOf="@id/delimiter"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/TrackInfoTextStyle"/>

            <TextView
                android:id="@+id/delimiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/search_scr_track_info_separator_placeholder_txt"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/track_duration"
                app:layout_constraintStart_toEndOf="@id/track_artist"
                style="@style/TrackInfoTextStyle"/>

            <TextView
                android:id="@+id/track_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_scr_track_duration_placeholder_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/delimiter"
                style="@style/TrackInfoTextStyle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!-- Fwd arrow icon -->
    <ImageView
        android:id="@+id/chevron_right"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_settings_fwd_btn_24"
        android:scaleType="centerInside" />

</LinearLayout>
