<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/main_scr_header"
            android:textColor="@color/white"
            android:textSize="23sp"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="33dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:layout_weight="1"
            android:text="@string/main_scr_search_btn_txt"
            android:textAllCaps="false"
            android:textSize="@dimen/btn_txt_size"
            android:letterSpacing="0"
            android:textColor="@color/main_txt_color"

            app:backgroundTint="@color/main_btn_color"
            app:cornerRadius="16dp"
            app:icon="@drawable/search_btn_ic"
            app:iconGravity="textStart"
            app:iconSize="@dimen/btn_icon_size"
            app:iconTint="@color/main_txt_color" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:layout_weight="1"
            android:text="@string/main_scr_library_btn_txt"
            android:textAllCaps="false"
            android:textSize="@dimen/btn_txt_size"
            android:letterSpacing="0"
            android:textColor="@color/main_txt_color"

            app:backgroundTint="@color/main_btn_color"
            app:cornerRadius="16dp"
            app:icon="@drawable/library_btn_ic"
            app:iconGravity="textStart"
            app:iconSize="@dimen/btn_icon_size"
            app:iconTint="@color/main_txt_color" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:layout_weight="1"
            android:text="@string/main_scr_settings_btn_txt"
            android:textAllCaps="false"
            android:textSize="@dimen/btn_txt_size"
            android:letterSpacing="0"
            android:textColor="@color/main_txt_color"

            app:backgroundTint="@color/main_btn_color"
            app:cornerRadius="16dp"
            app:icon="@drawable/settings_btn_ic"
            app:iconGravity="textStart"
            app:iconSize="@dimen/btn_icon_size"
            app:iconTint="@color/main_txt_color" />

    </LinearLayout>
</LinearLayout>