<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settings_bg_color"
    tools:context=".SearchActivity">

    <!--        NOTE: Manually select back arrow icon to follow the color of title text-->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/settings_bg_color"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_title_back_btn_48"
        app:navigationIconTint="@color/settings_txt_color"
        app:title="@string/search_scr_header"
        app:titleTextAppearance="@style/SettingsToolbarTitleAppearance"
        app:titleTextColor="@color/settings_txt_color"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginVertical="8dp"
        app:cardBackgroundColor="@color/search_input_field_color"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="2dp">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_search_16"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/search_scr_header"
                app:tint="@color/search_input_hint_color" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp">

                <EditText
                    android:id="@+id/search_input_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_scr_input_hint_txt"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingVertical="8dp"
                    android:textColor="@color/main_button_txt_color"
                    android:textColorHint="@color/search_input_hint_color"
                    android:textSize="16sp"
                    android:imeOptions="actionDone"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_clear_16"
                    android:visibility="gone"
                    app:tint="@color/search_input_clear_btn_color" />

            </FrameLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- Search history group -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/history_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/history_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:text="@string/search_scr_hist_header_txt"
                android:textAlignment="center"
                android:textColor="@color/settings_txt_color"
                android:textSize="18sp"
                app:fontFamily="@font/ys_display_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Limiting max height of history list to make
             "clear_history_button" button always visible -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constrainedHeight="true"
                app:layout_constraintHeight_max="600dp"
                app:layout_constraintTop_toBottomOf="@id/history_title"
                app:layout_constraintBottom_toTopOf="@id/clear_history_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_history_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/search_scr_clr_hist_btn_txt"
                android:textSize="14sp"
                android:textAllCaps="false"
                app:fontFamily="@font/ys_display_medium"
                app:backgroundTint="@color/search_track_name_color"
                app:cornerRadius="24dp"
                app:layout_constraintTop_toBottomOf="@id/history_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Connection Error splash screen -->
        <LinearLayout
            android:id="@+id/connection_error_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            android:padding="24dp"
            android:layout_marginBottom="180dp">

            <ImageView
                android:id="@+id/connection_error_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_search_conn_err_120"
                android:layout_marginBottom="16dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/connection_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_scr_conn_err_txt"
                android:textAlignment="center"
                android:textSize="19sp"
                android:textColor="@color/settings_txt_color"
                android:layout_marginBottom="16dp"
                app:fontFamily="@font/ys_display_medium"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_scr_redo_btn_txt"
                android:textSize="14sp"
                android:textAllCaps="false"
                app:fontFamily="@font/ys_display_medium"
                app:backgroundTint="@color/search_track_name_color"
                app:cornerRadius="24dp"/>
        </LinearLayout>

        <!-- Not found splash screen -->
        <LinearLayout
            android:id="@+id/nothing_found_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            android:padding="24dp"
            android:layout_marginBottom="180dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_search_not_found_err_120"
                android:layout_marginBottom="16dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_scr_not_found_txt"
                android:textAlignment="center"
                android:textSize="19sp"
                android:textColor="@color/settings_txt_color"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracks_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </FrameLayout>

</LinearLayout>