<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_bg_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Go back button -->
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_title_back_btn_48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/settings_txt_color" />

        <!-- Cover image -->
        <ImageView
            android:id="@+id/cover_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_track_label_placeholder_35"
            app:layout_constraintBottom_toTopOf="@+id/title_text"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />

        <!-- Track name and author -->
        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/player_primary_text_color"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cover_image" />

        <TextView
            android:id="@+id/artist_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            android:textColor="@color/player_primary_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <!-- Add to playlist button -->
        <ImageButton
            android:id="@+id/add_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_player_add_btn_51"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <!-- Play/Pause button -->
        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_player_play_84"
            android:layout_marginTop="16dp"

            app:layout_constraintStart_toEndOf="@+id/add_playlist_button"
            app:layout_constraintEnd_toStartOf="@+id/favorite_button"
            app:layout_constraintTop_toBottomOf="@+id/artist_text"/>

        <!-- Like button -->
        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_player_like_btn_51"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <!-- Timecode -->
        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/player_scr_timecode_placeholder_txt"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            android:textColor="@color/player_primary_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_button" />

        <!-- Duration -->
        <TextView
            android:id="@+id/duration_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/player_scr_duration_key_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_text"
            style="@style/PlayerSecondaryTextStyle"/>

        <TextView
            android:id="@+id/duration_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="13sp"
            android:textColor="@color/player_primary_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/duration_label" />

        <!-- Album -->
        <TextView
            android:id="@+id/album_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/player_scr_album_key_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_label"
            style="@style/PlayerSecondaryTextStyle"/>

        <TextView
            android:id="@+id/album_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="13sp"
            android:textColor="@color/player_primary_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/album_label" />

        <!-- Year -->
        <TextView
            android:id="@+id/year_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/player_secondary_text_color"
            android:text="@string/player_scr_year_key_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/album_label"
            style="@style/PlayerSecondaryTextStyle"/>

        <TextView
            android:id="@+id/year_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="13sp"
            android:textColor="@color/player_primary_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/year_label"/>

        <!-- Genre -->
        <TextView
            android:id="@+id/genre_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/player_scr_genre_key_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/year_label"
            style="@style/PlayerSecondaryTextStyle"/>

        <TextView
            android:id="@+id/genre_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="@color/player_primary_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/genre_label"/>

        <!-- Country -->
        <TextView
            android:id="@+id/country_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/player_scr_country_key_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre_value"
            style="@style/PlayerSecondaryTextStyle"/>

        <TextView
            android:id="@+id/country_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="@color/player_primary_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/country_label"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
